12/06/25 (upload), added language input and saved 2 lines based on language in img.txt